# mux-evals

./: .gitignore  README.md  run-all.py
evals/: agent-loop.jsonl  core-tools.jsonl  hooks.jsonl  llm-providers.jsonl  mcp-protocol.jsonl  subagents.jsonl  transcript.jsonl
runners/go/: go.mod  main.go
runners/rust/: Cargo.toml
runners/rust/src/: main.rs
