[package]
name = "mux-eval-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
mux = { path = "../../../mux-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
async-trait = "0.1"
dotenvy = "0.15"
futures = "0.3"
